tests/test_programs/errors/borrow_then_move.cm
// 借用安全性テスト: 借用中の変数をmove禁止
// 期待: コンパイルエラー "Cannot move 'x' while it is borrowed"
int main() {
    int x = 42;
    int* p = &x;  // xを借用
    int y = move x;  // エラー: xは借用中
    return 0;
}
